<resources>
    <string name="app_name">RepTracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <!-- LoginActivity -->
    <string name="login_button">Login</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Password</string>

    <!-- HomeActivity -->
    <string name="home_title">My Visits</string>
    <string name="completed_visits">Completed Visits</string>
    <string name="pending_visits">Pending Visits</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_presentation">Start</string>
    <string name="start_visit">Start Visit</string>
    <string name="doctors">Doctors</string>
    <string name="finish_presentation">Finish Presentation</string>
    <string name="complete_visit">Complete Visit</string>
    <string name="notes">Notes</string>
    <string name="signature">Signature</string>
    <string name="picture">Picture</string>
    <string name="remaining">remaining</string>
    <string name="channel_description">RepTacker geofence notification</string>
    <string name="channel_name">RepTracker geofence</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="login_error">Invalid username or password</string>
    <string name="list">List</string>
    <string name="map">Map</string>
</resources>
