<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VisitDoctorFragment">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="back" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintBottom_toTopOf="@+id/finish">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/doctorName"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/doctorSpeciality"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorName" />

            <ImageView
                android:id="@+id/telephoneIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:tint="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/doctorSpeciality"
                app:layout_constraintTop_toBottomOf="@+id/doctorSpeciality"
                app:srcCompat="@drawable/ic_call_black_24dp"
                android:contentDescription="telephoneIcon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contactNumber"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:autoLink="phone"
                app:layout_constraintBottom_toBottomOf="@+id/telephoneIcon"
                app:layout_constraintEnd_toEndOf="@+id/doctorSpeciality"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/telephoneIcon"
                app:layout_constraintTop_toTopOf="@+id/telephoneIcon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signatureHeading"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/signature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactNumber"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/captureImageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:tint="@color/colorAccent"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintStart_toStartOf="@+id/signatureHeading"
                app:layout_constraintTop_toBottomOf="@+id/signatureHeading"
                app:srcCompat="@drawable/ic_create_black_24dp"
                android:contentDescription="capture"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/signature"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/captureImageButton"
                android:visibility="gone"
                android:contentDescription="signature" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pictureHeading"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signature"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/picture"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pictureHeading"
                android:visibility="gone"
                android:contentDescription="picture" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="64dp"
                android:hint="@string/notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/picture"
                android:visibility="gone" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notesEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/presentationBlock"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/blackShade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/presentationTitle"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="Start Presentation"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/record"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="36dp"
            android:contentDescription="record"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/record" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pauseResume"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="@+id/stop"
            app:layout_constraintEnd_toStartOf="@+id/stop"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/stop"
            android:visibility="gone">

            <ImageView
                android:id="@+id/pause"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="pause"
                app:srcCompat="@mipmap/pause"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/resume"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="pause"
                app:srcCompat="@mipmap/resume"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/stop"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="36dp"
            android:contentDescription="stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pauseResume"
            app:srcCompat="@mipmap/stop"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/finish"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="16dp"
        android:text="@string/complete_visit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>